--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_BASE_URL=http://localhost:8080
+REACT_APP_CLOUDINARY_URL=	https://api.cloudinary.com/v1_1/dri7mslsq
+REACT_APP_CLOUDINARY_UPLOAD_PRESET=dri7mslsq
