--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
