--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "date-fns": "^2.15.0",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
+    "react-datepicker": "^3.1.3",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
